# DeptWeb

./: README.md  package.json  pyproject.toml
DeptWeb/: db.sqlite3  manage.py
DeptWeb/DeptWeb/: asgi.py  settings.py  urls.py  wsgi.py
DeptWeb/core/: admin.py  urls.py  views.py
DeptWeb/core/templates/core/: register.html
DeptWeb/users/: admin.py  forms.py  models.py  views.py
DeptWeb/users/migrations/: 0001_initial.py
DeptWeb/users/templates/users/: base.html  home.html  login.html  register.html
src/components/: Card.astro  Card1.astro  ImgSlide.astro  Logo.astro  NavElem.astro  VMBlock.astro
src/layouts/: Layout.astro  Layout2.astro
src/pages/: faculty-list.astro  index.astro
