[tool.poetry]
name = "deptweb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
pillow = "^10.0.0"
django-djazztro = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
